--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "**/bower_components": true,
     "**/.sfdx": true
   },
-  "eslint.nodePath": "/Users/mlott/.vscode/extensions/salesforce.salesforcedx-vscode-lwc-46.10.0/node_modules"
+  "eslint.nodePath": "/Users/jonathan.zhou/.vscode/extensions/salesforce.salesforcedx-vscode-lwc-46.10.0/node_modules"
 }
