with third party integration

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -2,11 +2,7 @@
     "compilerOptions": {
         "experimentalDecorators": true,
         "baseUrl": ".",
-        "paths": {
-            "c/ConfirmationFlowComponent": [
-                "ConfirmationFlowComponent/ConfirmationFlowComponent.js"
-            ]
-        }
+        "paths": {}
     },
     "include": [
         "**/*",
